
(ocamllex
  (modules lexer)
)

(menhir
  (modules parser)
  (flags -la 2)
)

(executable
  (name wys)
  (modes byte exe)
)

(env
  (dev  
    (flags (:standard -g)))
)



(rule
  (with-stdout-to wys.out
  (with-stdin-from ./example/millionaire/wys.in
    (run ./wys.exe)
  ))
)

(rule
  (alias test)
  (action (cat wys.out))
)
